--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -2,6 +2,18 @@
 @import "../../color-palette.scss";
 @import "../../shared/half-clipped-shape.scss";
 
+@mixin is-desktop-or-less {
+  // Extra large devices (large desktops, 1200px and up)
+  @media (max-width: 1200px) {
+    @content;
+  }
+}
+@mixin is-767px-or-less {
+  // Extra large devices (large desktops, 1200px and up)
+  @media (max-width: 767px) {
+    @content;
+  }
+}
 .work-carousel{
     .work-header{
       text-align: center;
@@ -23,13 +35,20 @@
       width: 63%;
       margin-left: auto;
       height: 920px;
+      @include is-desktop-or-less {
+        width: 100%;
+        margin: 0;
+        height: 1350px;
+      }
     }
     &__inside{
       background-color: $accent;
       &--img{
         display: flex;
-
         left: -30%;
+        @include is-desktop-or-less {
+          left: 0%;
+        }
         img{
           height: 100%;
           width: 100%;
@@ -37,13 +56,26 @@
           object-position: center center;
         }
       }
-      &--text{
-        color: $header-item;
-      }
       &--title{
         font-family: 'Segoe UI Bold';
         font-size: 2.5rem;
         position: relative;
+        height: 48px;
+        @include is-extra-small-mobile {
+          font-size: 1.6rem;
+        }
+        @include is-mobile {
+          font-size: 1.6rem;
+        }
+        @include is-tablet {
+          font-size: 1.6rem;
+        }
+        @include is-desktop {
+          font-size: 1.6rem;
+        }
+        @include is-large-desktop {
+          font-size: 1.8rem;
+        }
         &::after {
           content: "";
           position: absolute;
@@ -55,6 +87,24 @@
           background: $header-item;
         }
       }
+      &--text{
+        color: $header-item;
+        @include is-extra-small-mobile {
+          font-size: 1.1rem;
+        }
+        @include is-mobile {
+          font-size: 1.1rem;
+        }
+        @include is-tablet {
+          font-size: 1.2rem;
+        }
+        @include is-desktop {
+          font-size: 1.2rem;
+        }
+        @include is-large-desktop {
+          font-size: 1.4rem;
+        }
+      }
       &--text-container{
         min-height: 650px;
         border-right: solid 1px white;
@@ -62,22 +112,41 @@
         margin-left: -250px;
         margin-right: 150px;
         padding-right: 100px;
+        @include is-desktop-or-less{
+          margin-left: 0px;
+          margin-top: 0px;
+          min-height: 400px;
+        }
+        @include is-767px-or-less {
+          border-right: 0;
+          margin-right: 0px;
+          padding-right: 30px;
+        }
       }
     }
     &__btn{
       margin-left: -85px;
+      @include is-desktop-or-less{
+        margin-left: 0px;
+        display: flex;
+        justify-content: center;
+      }
     }
 }
-
 
 /deep/ div.outline-box__inside.outline-box__inside--is-button{
   background-color: $header-item;
   color: $accent;
   width: 155px;
+  font-size: 1.1rem;
   &:hover{
     background-color: $header-item;
     color: $accent;
   }
+}
+/deep/ .outline-box{
+  height: 50px!important;
+  width: 158px!important;
 }
 /deep/ .hero-bullets{
   display: none;
@@ -86,6 +155,16 @@
   position: absolute;
   right: 125px;
   bottom: 11%;
+  @include is-desktop-or-less{
+    bottom: 4%;
+  }
+  @include is-767px-or-less {
+    bottom: 0%;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
   button{
     margin:5px;
     background-color: transparent;
@@ -99,6 +178,7 @@
 /deep/ .half-filled-box{
   padding: 0!important;
   margin-top: 110px!important;
+  min-height: 650px!important;
 }
 @include is-extra-large-desktop {
   /deep/ .half-filled-box{
@@ -125,7 +205,7 @@ $widths-and-heights: (
     $width + 50vw
   ),
   clipped-shape-height-sm: (
-    $height + 20vw
+    $height + 30vw
   ),
   clipped-length-sm: $clipped-length,
   clipped-shape-width-md: $width + 30vw,
@@ -135,7 +215,7 @@ $widths-and-heights: (
   clipped-shape-height-lg: $height + 15vw,
   clipped-length-lg: $clipped-length,
   clipped-shape-width-xlg: $width + 5vw,
-  clipped-shape-height-xlg: $height + 10vw,
+  clipped-shape-height-xlg: $height + 30vw,
   clipped-length-xlg: $clipped-length,
   clipped-shape-width-xxlg: $width,
   clipped-shape-height-xxlg: $height,
