--- a/src/assets/sass/website/containers/home.scss
+++ b/src/assets/sass/website/containers/home.scss
@@ -24,6 +24,7 @@
     color: $black-text;
     margin: 10px auto 0;
     width: 80%;
+    padding-top: 20px;
   }
   &__title {
     font-family: "Arial Bold";
