--- a/src/assets/sass/website/components/services/services-main-page.scss
+++ b/src/assets/sass/website/components/services/services-main-page.scss
@@ -3,16 +3,22 @@
 @import "../../shared/half-clipped-shape.scss";
 
 .services-page-wrapper {
-  width: 80%;
+  width: 100%;
   margin: auto;
   padding-top: 100px;
   padding-bottom: 100px;
   user-select: none;
+  position: relative;
+  background-color: $accent;
+  z-index: 102;
   @include is-extra-small-mobile {
     padding-top: 40px;
     padding-bottom: 40px;
   }
   &__content-wrapper {
+    a div img {
+      width: 100%;
+    }
     &:hover {
       img {
         filter: brightness(50%);
@@ -27,45 +33,46 @@
   &__content {
     position: relative;
     color: $header-item;
-    margin: 20px;
-    @media (min-width: 2000px) {
-      width: 490px;
-      height: 490px;
-    }
-    @media (min-width: 1700px) and (max-width: 1999px) {
-      width: 420px;
-      height: 420px;
-    }
-    @media (min-width: 1500px) and (max-width: 1699px) {
-      width: 400px;
-      height: 400px;
-    }
-    @media (min-width: 1300px) and (max-width: 1499px) {
-      width: 330px;
-      height: 330px;
-    }
-    @media (min-width: 1200px) and (max-width: 1299px) {
-      width: 320px;
-      height: 320px;
-    }
-    @media (min-width: 800px) and (max-width: 1199px) {
-      width: 280px;
-      height: 280px;
-    }
-    @media (min-width: 500px) and (max-width: 767px) {
-      width: 380px;
-      height: 380px;
-      margin: 15px auto;
-    }
-    @media (max-width: 499px) {
-      width: 100%;
-      height: auto;
-      margin: 0 0 10px 0;
-    }
+    margin: 10px 0;
+    // @media (min-width: 2000px) {
+    //   width: 490px;
+    //   height: 490px;
+    // }
+    // @media (min-width: 1700px) and (max-width: 1999px) {
+    //   width: 380px;
+    //   height: 380px;
+    // }
+    // @media (min-width: 1500px) and (max-width: 1699px) {
+    //   width: 300px;
+    //   height: 300px;
+    // }
+    // @media (min-width: 1300px) and (max-width: 1499px) {
+    //   width: 330px;
+    //   height: 330px;
+    // }
+    // @media (min-width: 1200px) and (max-width: 1299px) {
+    //   width: 320px;
+    //   height: 320px;
+    // }
+    // @media (min-width: 800px) and (max-width: 1199px) {
+    //   width: 280px;
+    //   height: 280px;
+    // }
+    // @media (min-width: 500px) and (max-width: 767px) {
+    //   width: 380px;
+    //   height: 380px;
+    //   margin: 15px auto;
+    // }
+    // @media (max-width: 499px) {
+    //   width: 100%;
+    //   height: auto;
+    //   margin: 0 0 10px 0;
+    // }
 
     img {
       width: 100%;
       height: 100%;
+      border-radius: 10px;
       object-fit: cover;
       clip-path: polygon(0% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0%);
       transition: all 0.2s ease-in-out;
@@ -82,7 +89,7 @@
     bottom: 0%;
     h2 {
       font-family: Arial;
-    font-weight: bold;
+      font-weight: bold;
       font-size: 1.4rem;
       text-transform: uppercase;
       @include is-extra-small-mobile {
