--- a/src/assets/sass/website/containers/services.scss
+++ b/src/assets/sass/website/containers/services.scss
@@ -57,7 +57,7 @@
       width: 80%;
       height: 100%;
       margin: auto;
-      text-align: left;
+      text-align: center;
       overflow: hidden;
       // overflow-y: auto;
       h1 {
@@ -65,7 +65,7 @@
         user-select: none;
         font-size: 2.5rem;
         font-family: Arial;
-    font-weight: bold;
+        font-weight: bold;
         @include max-width-1650 {
           font-size: 2rem;
         }
@@ -130,5 +130,5 @@ $widths-and-heights: (
 
 // use /deep/ to apply scss classes to the child components
 div /deep/ {
-  @include filled-half-clipped-shape($widths-and-heights, rgba($primary, 0.95));
+  @include filled-half-clipped-shape($widths-and-heights, transparent);
 }
